--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <body>
     <h1>Material</h1>
-
-    <a href="material/w1.html">Week 1</a>
-    <a href="viz/assign.html">Assign</a>
+    
+    <ul>
+        <li><a href="material/w1.html">Week 1</a></li>
+        <li><a href="material/w2.html">Week 2</a></li>
+        <li><a href="material/w3.html">Week 3</a></li>
+        <li><a href="material/w4-0.html">Week 4-0</a></li>
+        <li><a href="material/w4-1.html">Week 4-1</a></li>
+        <li><a href="viz/assign.html">Assignment</a></li>
+    </ul>
 </body>
 </html>
